objects/Complaint_Creation_Batch_Time__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Completion_Time__c</fullName>
        <label>Batch Completion Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Recipient__c</fullName>
        <label>Email Recipients</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Limit__c</fullName>
        <label>Record Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Interval__c</fullName>
        <label>Time Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Complaint Creation Batch Time</label>
</CustomObject>